--- a/fullstack_app/backend/package.json
+++ b/fullstack_app/backend/package.json
@@ -4,15 +4,24 @@
   "description": "Dashboard to evaluate the research performance of a department and its researchers",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --exec babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Munoz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/node": "^7.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
