--- a/fullstack_app/client/package.json
+++ b/fullstack_app/client/package.json
@@ -29,5 +29,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.6"
   }
 }
