--- a/fullstack_app/client/public/manifest.json
+++ b/fullstack_app/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "RI Dashboard",
+  "name": "Research Impact Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
