--- a/fullstack_app/package.json
+++ b/fullstack_app/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.1"
+    "concurrently": "^4.1.1",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
