--- a/fullstack_app/package.json
+++ b/fullstack_app/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^4.1.1",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
